fix scrollbar issue in chat

--- a/files/assets/css/chat_done.css
+++ b/files/assets/css/chat_done.css
@@ -160,7 +160,7 @@ lite-youtube {
 	position: relative;
 	padding-right: 1.5rem;
 	max-height: 300px;
-	overflow: scroll;
+	overflow-x: scroll;
 }
 .ChatMessage__isDm {
 	background: var(--gray-800);
